[tk-12] Documentação das rotas de evento de contrato (hitorico)
