# docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /api/v1
 definitions:
+  dtos.ContractEventResponse:
+    properties:
+      data_evento:
+        type: string
+      estado_antigo:
+        type: string
+      estado_novo:
+        type: string
+      id:
+        type: string
+    type: object
   dtos.ContractResponse:
     properties:
       cliente_id:
@@ -300,6 +311,34 @@ paths:
       summary: atualiza o contrato
       tags:
       - contract
+  /contrato/{id}/historico:
+    get:
+      consumes:
+      - application/json
+      description: rota para a pesquisa do hitorico de evento de contrato pelo id
+        do contrato
+      parameters:
+      - description: id do contrato
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dtos.ContractEventResponse'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: pesquisa de evento de contrato
+      tags:
+      - contractEvent
   /contratos:
     get:
       consumes:
